--- a/laundry/templates/laundry/info.html
+++ b/laundry/templates/laundry/info.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laundry Info</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/35c881c056.js" crossorigin="anonymous"></script>
-</head>
-<body style="font-family: Arial, sans-serif; background-color: #f4f4f4; color: #333;">
+{% extends "laundry/layout.html" %}
+{% load static %}
+{% block title %}Laundry Info{% endblock %}
+{% block body %}
 <div class="container">
-    <h1 style="color: #4CAF50;">Laundry Management System</h1>
 
     <form class="bg-white p-4 rounded" style="width: 300px;" action="{% url 'add' reg_number %}" method="post">
         <p class="text-dark fw-bold">
@@ -72,20 +64,14 @@
 
 
 </div>
-
-</body>
+{% endblock %}
 <script>
     const deleteForm = document.getElementById('deleteForm');
-        if (deleteForm) {
-            deleteForm.addEventListener('submit', function (event) {
-                if (!confirm("Are you sure you want to delete this item?")) {
-                    event.preventDefault(); // Prevent form submission
-                }
-            });
-        }
+    if (deleteForm) {
+        deleteForm.addEventListener('submit', function (event) {
+            if (!confirm("Are you sure you want to delete this item?")) {
+                event.preventDefault(); // Prevent form submission
+            }
+        });
+    }
 </script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</html>
