--- a/laundry/templates/laundry/index.html
+++ b/laundry/templates/laundry/index.html
@@ -1,144 +1,132 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laundry - Registration</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body style="font-family: Arial, sans-serif; background-color: #f4f4f4; color: #333;">
-<div class="container mt-2 aligned">
-    <h2 style="color: #4554e5;">Laundry Management System</h2>
+{% extends "laundry/layout.html" %}
+{% load static %}
+{% block body %}
+    <div class="container mt-2 aligned">
 
-    <form class="bg-white p-3 rounded card" style="width: 300px;" id="regForm" method="post">
-        {% csrf_token %}
-        <label for="reg_number" style="color: #333;">Registration Number:</label><br>
-        <input type="text" id="reg_number" class="form-control px-2" name="reg_number"
-               placeholder="Enter Registration Number" required><br>
+        <form class="bg-white p-3 rounded card" style="width: 300px;" id="regForm" method="post">
+            {% csrf_token %}
+            <label for="reg_number" style="color: #333;">Registration Number:</label><br>
+            <input type="text" id="reg_number" class="form-control px-2" name="reg_number"
+                   placeholder="Enter Registration Number" required><br>
 
-        <button type="submit" class="btn btn-outline-primary w-50" role="button">
-            Submit
-        </button>
-    </form>
+            <button type="submit" class="btn btn-outline-primary w-50" role="button">
+                Submit
+            </button>
+        </form>
 
-    <table class="table table-bordered table-hover mt-4" id="laundryTable">
-        <thead>
-        <tr>
-            <th>Sl. No</th>
-            <th>Reg Number</th>
-            <th>Date</th>
-            <th>Status (Out?)</th>
-            <th>Count</th>
-            <th>Delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for laundry in laundries %}
-            <tr data-reg-number="{{ laundry.reg_number }}">
-                <td>{{ forloop.counter }}</td>
-                <td>{{ laundry.reg_number }}</td>
-                <td>{{ laundry.date }}</td>
-                <td>
-                    <input
-                            type="checkbox"
-                            class="status-toggle"
-                            data-id="{{ laundry.id }}"
-                            {% if laundry.out %}checked{% endif %}
-                            aria-label=""
-                    />
-                </td>
-                <td>
-                    {{ laundry.clothCount }}
-                </td>
-                <td>
-                    <form method="POST" action="{% url 'delete' laundry.id %}" id="deleteForm">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                    </form>
-
-                </td>
+        <table class="table table-bordered table-hover mt-4" id="laundryTable">
+            <thead>
+            <tr>
+                <th>Sl. No</th>
+                <th>Reg Number</th>
+                <th>Date</th>
+                <th>Status (Out?)</th>
+                <th>Count</th>
+                <th>Delete</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for laundry in laundries %}
+                <tr data-reg-number="{{ laundry.reg_number }}">
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{ laundry.reg_number }}</td>
+                    <td>{{ laundry.date }}</td>
+                    <td>
+                        <input
+                                type="checkbox"
+                                class="status-toggle"
+                                data-id="{{ laundry.id }}"
+                                {% if laundry.out %}checked{% endif %}
+                                aria-label=""
+                        />
+                    </td>
+                    <td>
+                        {{ laundry.clothCount }}
+                    </td>
+                    <td>
+                        <form method="POST" action="{% url 'delete' laundry.id %}" id="deleteForm">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
 
-    <script>
-        const deleteForm = document.getElementById('deleteForm');
-        if (deleteForm) {
-            deleteForm.addEventListener('submit', function (event) {
-                if (!confirm("Are you sure you want to delete this item?")) {
-                    event.preventDefault(); // Prevent form submission
-                }
-            });
-        }
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-        // Check if there are any checkboxes with the class 'status-toggle'
-        document.querySelectorAll('.status-toggle').forEach(function (checkbox) {
-            checkbox.addEventListener('change', function () {
-                const laundryId = this.getAttribute('data-id');
-                const status = this.checked ? 'out' : 'in';
+        <script>
+            const deleteForm = document.getElementById('deleteForm');
+            if (deleteForm) {
+                deleteForm.addEventListener('submit', function (event) {
+                    if (!confirm("Are you sure you want to delete this item?")) {
+                        event.preventDefault(); // Prevent form submission
+                    }
+                });
+            }
 
-                fetch(`/toggle/${laundryId}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'X-CSRFToken': '{{ csrf_token }}',
-                    },
-                    body: JSON.stringify({
-                        'status': status
+            // Check if there are any checkboxes with the class 'status-toggle'
+            document.querySelectorAll('.status-toggle').forEach(function (checkbox) {
+                checkbox.addEventListener('change', function () {
+                    const laundryId = this.getAttribute('data-id');
+                    const status = this.checked ? 'out' : 'in';
+
+                    fetch(`/toggle/${laundryId}`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-CSRFToken': '{{ csrf_token }}',
+                        },
+                        body: JSON.stringify({
+                            'status': status
+                        })
                     })
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            alert(`Laundry status updated to ${status.toUpperCase()}`);
-                        } else {
-                            alert('Failed to update the status.');
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.success) {
+                                alert(`Laundry status updated to ${status.toUpperCase()}`);
+                            } else {
+                                alert('Failed to update the status.');
+                                this.checked = !this.checked;
+                            }
+                        })
+                        .catch(error => {
+                            alert('Error updating status.');
                             this.checked = !this.checked;
-                        }
-                    })
-                    .catch(error => {
-                        alert('Error updating status.');
-                        this.checked = !this.checked;
-                    });
+                        });
+                });
             });
-        });
 
-        // Check if rows exist in the table before adding event listeners
-        document.querySelectorAll('#laundryTable tbody tr').forEach(function (row) {
-            row.addEventListener('click', function () {
-                document.getElementById('reg_number').value = this.getAttribute('data-reg-number');
+            // Check if rows exist in the table before adding event listeners
+            document.querySelectorAll('#laundryTable tbody tr').forEach(function (row) {
+                row.addEventListener('click', function () {
+                    document.getElementById('reg_number').value = this.getAttribute('data-reg-number');
+                });
             });
-        });
 
 
-        const regForm = document.getElementById('regForm');
-        if (regForm) {
-            regForm.addEventListener('submit', function (event) {
-                event.preventDefault();
+            const regForm = document.getElementById('regForm');
+            if (regForm) {
+                regForm.addEventListener('submit', function (event) {
+                    event.preventDefault();
 
-                const regNumber = document.getElementById('reg_number').value;
+                    const regNumber = document.getElementById('reg_number').value;
 
-                // Regex pattern to match any 2 digits, any 3 letters, and 4 or 5 digits
-                const regNumberPattern = /^\d{2}[a-zA-Z]{3}\d{4,5}$/;
+                    // Regex pattern to match any 2 digits, any 3 letters, and 4 or 5 digits
+                    const regNumberPattern = /^\d{2}[a-zA-Z]{3}\d{4,5}$/;
 
-                if (!regNumberPattern.test(regNumber)) {
-                    alert("Invalid registration number. Please enter a valid format.");
-                    return;
-                }
+                    if (!regNumberPattern.test(regNumber)) {
+                        alert("Invalid registration number. Please enter a valid format.");
+                        return;
+                    }
 
-                this.action = '/info/' + regNumber;
-                this.submit();
-            });
-        }
+                    this.action = '/info/' + regNumber;
+                    this.submit();
+                });
+            }
 
 
-    </script>
+        </script>
 
-</div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</html>
+    </div>
+{% endblock %}
