--- a/laundry/templates/laundry/register.html
+++ b/laundry/templates/laundry/register.html
@@ -7,24 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <link href='{% static 'laundry\css\login.css' %}' rel='stylesheet' type='text/css'>
+    <link href='{% static 'laundry\css\register.css' %}' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-<div id="pin">
-    <select id="username" name="username" style="background-color: transparent;color: white">
-        {% for user in users %}
-            <option value="{{ user.username }}" style="color: black;">{{ user.username }}</option>
-        {% endfor %}
-    </select>
 
+<div id="pin">
+    <p contenteditable="" id="editableContent">vitap_mh3</p>
+    <input type="hidden" id="username" name="username">
     <div class="dots">
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
     </div>
-    <p>Enter the password</p>
+
+    <p id="info_box">Enter the password</p>
     <div class="numbers">
         <div class="number">1</div>
         <div class="number">2</div>
@@ -40,7 +40,7 @@
 <script>
     const csrftoken = "{{ csrf_token }}";
 </script>
-<script src="{% static 'laundry/js/login.js' %}">
+<script src="{% static 'laundry/js/register.js' %}">
 </script>
 
 </body>
